Integration: Facial recognition fix and Gamification (Plant evolving) features